[package]
name = "kernel_gaming"
version = "0.1.0"
edition = "2021"

# cargo install bootimage
# Run cargo bootimage
# qemu-system-x86_64 -drive format=raw,file=target/x86_64-kernel_gaming/debug/bootimage-kernel_gaming.bin

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = "0.9.8"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.9.8"
volatile = "0.5.1"
x86_64 = "0.14.11"
